--- a/src/app/alunos/aluno.component.css
+++ b/src/app/alunos/aluno.component.css
@@ -1,50 +1,43 @@
-.heroes {
+.alunos {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
-  width: 15em;
+  width: 23em;
 }
-.heroes li {
+.alunos li {
   cursor: pointer;
   position: relative;
   left: 0;
-  background-color: #EEE;
+  background-color: rgb(155, 148, 197);
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
-.heroes li:hover {
+.alunos li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
-.heroes li.selected {
-  background-color: #CFD8DC;
+.alunos li.selected {
+  background-color: rgb(118, 166, 187);
   color: white;
 }
-.heroes li.selected:hover {
-  background-color: #BBD8DC;
+.alunos li.selected:hover {
+  background-color: rgb(35, 162, 179);
   color: white;
 }
-.heroes .badge {
+.alunos .badge {
   display: inline-block;
   font-size: small;
   color: white;
-  padding: 0.8em 0.7em 0 0.7em;
+  padding: 0.8em 0.7em 0 .7em;
   background-color:#405061;
   line-height: 1em;
   position: relative;
   left: -1px;
   top: -4px;
   height: 1.8em;
-  margin-right: .8em;
+  margin-right: .2em;
   border-radius: 4px 0 0 4px;
 }
-
-
-/*
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
-*/
