--- a/src/app/alunos/aluno.component.html
+++ b/src/app/alunos/aluno.component.html
@@ -1,14 +1,19 @@
-<h2>ALUNOS</h2>
+<h2>Lista de Alunos</h2>
+
+
+
 <ul class="alunos">
-  <li *ngFor="let aluno of alunos" (click) ="onSelect(aluno)"
-  [class.selected]= "hero === selectedAluno" (click)="onSelect(Aluno)">
-  <span class="badge"> {{aluno.matricula}} </span> {{aluno.nome}} {{aluno.curso}}
+  <li *ngFor="let aluno of alunos" (click) ="onSelect"
+  [class.selected]= "aluno === selectedAluno" (click)="onSelect(Aluno)">
+  <span class="badge"> {{aluno.matricula}} </span> {{aluno.nome}} <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curso: </b>{{aluno.curso}}
   </li>
 </ul>
 
+<app-aluno-detail [aluno]="selectedAlunos"></app-aluno-detail>
+
 <div *ngIf="selectedAluno">
-  
-  <h2>{{selectedAluno.nome || uppercase}} Details</h2>
+
+  <h2>{{selectedAluno.nome | uppercase}} Details</h2>
   <div><span>Matricula: </span> {{selectedAluno.matricula}}</div>
   <div><span> Curso: </span> {{selectedAluno.curso}}</div>
   <div>
